[gd_scene load_steps=13 format=1]

[ext_resource path="res://res/ships/ship.gd" type="Script" id=1]
[ext_resource path="res://assets/graphics/ships/EVA.png" type="Texture" id=2]
[ext_resource path="res://assets/graphics/particles/engineflare.png" type="Texture" id=3]
[ext_resource path="res://ref/ColorRamps/ramp_redfire.res" type="ColorRamp" id=4]
[ext_resource path="res://ref/ColorRamps/ramp_bluefire.res" type="ColorRamp" id=5]
[ext_resource path="res://assets/graphics/ships/radiodish.png" type="Texture" id=6]

[sub_resource type="ConvexPolygonShape2D" id=5]

custom_solver_bias = 0.0
points = Vector2Array( -13, 4, -13, 0, -7, 0, -7, 4 )

[sub_resource type="ConvexPolygonShape2D" id=6]

custom_solver_bias = 0.0
points = Vector2Array( -5, -2, -5, -6, 5, -6, 5, -2 )

[sub_resource type="ConvexPolygonShape2D" id=7]

custom_solver_bias = 0.0
points = Vector2Array( 7, 0, 13, 0, 13, 4, 7, 4 )

[sub_resource type="ConvexPolygonShape2D" id=8]

custom_solver_bias = 0.0
points = Vector2Array( 7, 4, 7, 9, 5, 12, -5, 12, -7, 9, -7, 4 )

[sub_resource type="ConvexPolygonShape2D" id=9]

custom_solver_bias = 0.0
points = Vector2Array( -5, -2, 5, -2, 7, 0, 7, 4, -7, 4, -7, 0 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 3, 1 )

[node name="Ship" type="RigidBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, -2 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 6 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, -2 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 7 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, 0, -2 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 8 )
shapes/3/transform = Matrix32( 1, 0, 0, 1, 0, -2 )
shapes/3/trigger = false
shapes/4/shape = SubResource( 9 )
shapes/4/transform = Matrix32( 1, 0, 0, 1, 0, -2 )
shapes/4/trigger = false
collision/layers = 1
collision/mask = 1
mode = 0
mass = 0.5
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 3
contact_monitor = true
sleeping = false
can_sleep = false
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = 0.0
damp_override/angular = 0.0
script/script = ExtResource( 1 )
delta_v_main = 0.0
delta_v = 5.0
delta_r = 1.5
rcs_config_I = false

[node name="Forward" type="Position2D" parent="."]

transform/pos = Vector2( 0, 50 )

[node name="Camera" type="Camera2D" parent="."]

transform/rot = 180.0
anchor_mode = 1
rotating = true
current = false
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = false
drag_margin/v_enabled = false
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.0
drag_margin/top = 0.0
drag_margin/right = 0.0
drag_margin/bottom = 0.0

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( -2.78158e-06, 4 )
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]

transform/pos = Vector2( 0, -2 )
build_mode = 0
polygon = Vector2Array( -13, 4, -7, 4, -7, 9, -5, 12, 5, 12, 7, 9, 7, 4, 13, 4, 13, 0, 7, 0, 5, -2, 5, -6, -5, -6, -5, -2, -7, 0, -13, 0 )
shape_range = Vector2( 0, 4 )
trigger = false

[node name="Dock" type="Area2D" parent="."]

transform/pos = Vector2( 0, 11 )
input/pickable = true
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="Light" type="Polygon2D" parent="Dock"]

polygon = Vector2Array( 3, -1, 3, 1, -3, 1, -3, -1 )
uv = Vector2Array(  )
color = Color( 1, 0.132813, 0.132813, 1 )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dock"]

shape = SubResource( 4 )
trigger = false
_update_shape_index = 0

[node name="DockJoint" type="PinJoint2D" parent="."]

node_a = NodePath("..")
node_b = NodePath("..")
bias/bias = 0.9
collision/exclude_nodes = false
softness = 0.0

[node name="Left" type="Position2D" parent="."]

transform/pos = Vector2( 50, 0 )

[node name="thrust_emitters" type="Node2D" parent="."]

visibility/behind_parent = true

[node name="ProThrustR" type="Particles2D" parent="thrust_emitters"]

visibility/visible = false
visibility/self_opacity = 0.5
visibility/blend_mode = 1
transform/pos = Vector2( -13, -28 )
transform/rot = 180.0
config/amount = 16
config/lifetime = 1.0
config/time_scale = 3.0
config/texture = ExtResource( 3 )
params/direction = 0.0
params/spread = 0.0
params/linear_velocity = 20.0
params/spin_velocity = 5.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 4.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/spin_velocity = 1.0
randomness/initial_angle = 1.0
randomness/initial_size = 0.5
color/color_ramp = ExtResource( 4 )

[node name="ProThrustL" type="Particles2D" parent="thrust_emitters"]

visibility/visible = false
visibility/self_opacity = 0.5
visibility/blend_mode = 1
transform/pos = Vector2( 13, -28 )
transform/rot = 180.0
config/amount = 16
config/lifetime = 1.0
config/time_scale = 3.0
config/texture = ExtResource( 3 )
params/direction = 0.0
params/spread = 0.0
params/linear_velocity = 20.0
params/spin_velocity = 5.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 4.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/spin_velocity = 1.0
randomness/initial_angle = 1.0
randomness/initial_size = 0.5
color/color_ramp = ExtResource( 4 )

[node name="RetroThrustR" type="Particles2D" parent="thrust_emitters"]

visibility/visible = false
visibility/self_opacity = 0.5
visibility/blend_mode = 1
transform/pos = Vector2( -22, -7 )
config/amount = 16
config/lifetime = 1.0
config/time_scale = 3.0
config/texture = ExtResource( 3 )
params/direction = 0.0
params/spread = 0.0
params/linear_velocity = 20.0
params/spin_velocity = 5.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 3.0
params/final_size = 0.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/spin_velocity = 1.0
randomness/initial_angle = 1.0
randomness/initial_size = 0.5
color/color_ramp = ExtResource( 4 )

[node name="RetroThrustL" type="Particles2D" parent="thrust_emitters"]

visibility/visible = false
visibility/self_opacity = 0.5
visibility/blend_mode = 1
transform/pos = Vector2( 22, -7 )
config/amount = 16
config/lifetime = 1.0
config/time_scale = 3.0
config/texture = ExtResource( 3 )
params/direction = 0.0
params/spread = 0.0
params/linear_velocity = 20.0
params/spin_velocity = 5.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 3.0
params/final_size = 0.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/spin_velocity = 1.0
randomness/initial_angle = 1.0
randomness/initial_size = 0.5
color/color_ramp = ExtResource( 4 )

[node name="RCSProR" type="Particles2D" parent="thrust_emitters"]

visibility/self_opacity = 0.5
visibility/blend_mode = 1
transform/pos = Vector2( -12, -2 )
transform/rot = 180.0
config/amount = 24
config/lifetime = 0.5
config/time_scale = 3.0
config/texture = ExtResource( 3 )
params/direction = 0.0
params/spread = 0.0
params/linear_velocity = 20.0
params/spin_velocity = 5.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 0.5
params/final_size = 0.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/spin_velocity = 1.0
randomness/initial_angle = 1.0
randomness/initial_size = 0.5
color/color_ramp = ExtResource( 5 )

[node name="RCSProL" type="Particles2D" parent="thrust_emitters"]

visibility/self_opacity = 0.5
visibility/blend_mode = 1
transform/pos = Vector2( 12, -1.99999 )
transform/rot = 180.0
config/amount = 24
config/lifetime = 0.5
config/time_scale = 3.0
config/texture = ExtResource( 3 )
params/direction = 0.0
params/spread = 0.0
params/linear_velocity = 20.0
params/spin_velocity = 5.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 0.5
params/final_size = 0.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/spin_velocity = 1.0
randomness/initial_angle = 1.0
randomness/initial_size = 0.5
color/color_ramp = ExtResource( 5 )

[node name="RCSRetroR" type="Particles2D" parent="thrust_emitters"]

visibility/self_opacity = 0.5
visibility/blend_mode = 1
transform/pos = Vector2( -12, 2 )
config/amount = 24
config/lifetime = 0.5
config/time_scale = 3.0
config/texture = ExtResource( 3 )
params/direction = 0.0
params/spread = 0.0
params/linear_velocity = 20.0
params/spin_velocity = 5.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 0.5
params/final_size = 0.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/spin_velocity = 1.0
randomness/initial_angle = 1.0
randomness/initial_size = 0.5
color/color_ramp = ExtResource( 5 )

[node name="RCSRetroL" type="Particles2D" parent="thrust_emitters"]

visibility/self_opacity = 0.5
visibility/blend_mode = 1
transform/pos = Vector2( 12, 2 )
config/amount = 24
config/lifetime = 0.5
config/time_scale = 3.0
config/texture = ExtResource( 3 )
params/direction = 0.0
params/spread = 0.0
params/linear_velocity = 20.0
params/spin_velocity = 5.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 0.5
params/final_size = 0.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/spin_velocity = 1.0
randomness/initial_angle = 1.0
randomness/initial_size = 0.5
color/color_ramp = ExtResource( 5 )

[node name="RCSRightF" type="Particles2D" parent="thrust_emitters"]

visibility/self_opacity = 0.5
visibility/blend_mode = 1
transform/pos = Vector2( -6, 8 )
transform/rot = 270.0
config/amount = 24
config/lifetime = 0.5
config/time_scale = 3.0
config/texture = ExtResource( 3 )
params/direction = 0.0
params/spread = 0.0
params/linear_velocity = 20.0
params/spin_velocity = 5.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 0.5
params/final_size = 0.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/spin_velocity = 1.0
randomness/initial_angle = 1.0
randomness/initial_size = 0.5
color/color_ramp = ExtResource( 5 )

[node name="RCSRightA" type="Particles2D" parent="thrust_emitters"]

visibility/self_opacity = 0.5
visibility/blend_mode = 1
transform/pos = Vector2( -5, -6 )
transform/rot = 270.0
config/amount = 24
config/lifetime = 0.5
config/time_scale = 3.0
config/texture = ExtResource( 3 )
params/direction = 0.0
params/spread = 0.0
params/linear_velocity = 20.0
params/spin_velocity = 5.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 0.5
params/final_size = 0.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/spin_velocity = 1.0
randomness/initial_angle = 1.0
randomness/initial_size = 0.5
color/color_ramp = ExtResource( 5 )

[node name="RCSLeftF" type="Particles2D" parent="thrust_emitters"]

visibility/self_opacity = 0.5
visibility/blend_mode = 1
transform/pos = Vector2( 6, 8 )
transform/rot = 90.0
config/amount = 24
config/lifetime = 0.5
config/time_scale = 3.0
config/texture = ExtResource( 3 )
params/direction = 0.0
params/spread = 0.0
params/linear_velocity = 20.0
params/spin_velocity = 5.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 0.5
params/final_size = 0.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/spin_velocity = 1.0
randomness/initial_angle = 1.0
randomness/initial_size = 0.5
color/color_ramp = ExtResource( 5 )

[node name="RCSLeftA" type="Particles2D" parent="thrust_emitters"]

visibility/self_opacity = 0.5
visibility/blend_mode = 1
transform/pos = Vector2( 5, -6 )
transform/rot = 90.0
config/amount = 24
config/lifetime = 0.5
config/time_scale = 3.0
config/texture = ExtResource( 3 )
params/direction = 0.0
params/spread = 0.0
params/linear_velocity = 20.0
params/spin_velocity = 5.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 0.5
params/final_size = 0.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/spin_velocity = 1.0
randomness/initial_angle = 1.0
randomness/initial_size = 0.5
color/color_ramp = ExtResource( 5 )

[node name="Hardpoints" type="Node2D" parent="."]

visibility/visible = false

[node name="RadioDish" type="Sprite" parent="Hardpoints"]

transform/pos = Vector2( -11, -19 )
texture = ExtResource( 6 )
offset = Vector2( 0, 6 )
flip_v = true
modulate = Color( 0.992188, 1, 0, 1 )

[connection signal="body_enter" from="." to="." method="_on_Ship_body_enter"]

[connection signal="area_enter" from="Dock" to="." method="_on_Dock_area_enter"]

[connection signal="area_exit" from="Dock" to="." method="_on_Dock_area_exit"]


